--- a/frontend/src/pages/Scores.css
+++ b/frontend/src/pages/Scores.css
@@ -121,6 +121,13 @@
   min-width: 100px;
 }
 
+.name-select {
+  min-width: 120px;
+  text-align: left;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
 .score-input {
   width: 80px;
   font-weight: 600;
