style: Members 페이지의 개인정보 셀 CSS에서 flex 속성 주석 처리로 레이아웃 조정

--- a/frontend/src/pages/Members.css
+++ b/frontend/src/pages/Members.css
@@ -331,7 +331,7 @@
 /* 전화번호, 이메일 셀을 flex container로 만들어 중앙 정렬 */
 .members-table td:nth-child(2),
 .members-table td:nth-child(5) {
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
 }
